collapse-bar corrections

--- a/index.css
+++ b/index.css
@@ -19,6 +19,9 @@
   #first-device {
     display: none;
   }
+  .header-content h1 {
+    line-height: 35px;
+  }
 }
 
 #content-stuff {
